# University-Projects

./: README.md
AI/: Readme.md
AI/lab1_AI/: main.py
AI/lab3_AI/: quickstart-file.py
ASM/: README.md  lab1_1.asm  lab1_10.asm  lab1_13.asm  lab1_14.asm  lab1_15.asm  lab1_3.asm  lab1_4.asm  lab1_5.asm  lab1_6.asm  lab1_7.asm  lab1_8.asm  lab1_9.asm  lab2_7.asm  lab3A.asm  lab3B.asm  lab3a3.asm  lab3a_1.asm  lab3a_10.asm  lab3a_11.asm  lab3a_12.asm  lab3a_13.asm  lab3a_14.asm  lab3a_15.asm  lab3a_4.asm  lab3a_5.asm  lab3a_6.asm  lab3a_7.asm  lab3a_8.asm  lab3a_9.asm  lab3b_1.asm  lab3b_10.asm  lab3b_11.asm  lab3b_12.asm  lab3b_13.asm  lab3b_14.asm  lab3b_15.asm  lab3b_3.asm  lab3b_4.asm  lab3b_6.asm  (+51 more)
FP/: README.md
FP/PRACTIC/: action-movies.txt  drama-movies.txt  main.py  thriller-movies.txt
FP/artist/: artist.txt  main.py
FP/cafenea_altul/: cafea.txt  main.py
FP/cafenea_practic_v2/: coffee.txt  main.py
MAP/: README.md
Maple/: AlexandrescuEmiliaAndreea.mw  README.md  lab1.mw  lab2.mw  lab3.mw  lab4.mw  lab5.mw  practic.mw
OOP/: README.md
OOP/Tonomat_de_dulciuri/: ATM.cpp  ATM.h  CMakeLists.txt  Colectie.h  Dulciuri.cpp  Dulciuri.h  FileRepoDulciuri.h  MyException.h  Pereche.h  RepoDulciuri.h  Service.cpp  Service.h  Tranzactie.cpp  Tranzactie.h  UIDulciuri.cpp  UIDulciuri.h  Validator.h  ValidatorException.h  VectorDinamic.h  main.cpp  teste.cpp  teste.h
OOP/cheltuieli/: CMakeLists.txt  Cheltuieli.cpp  Cheltuieli.h  Repo.cpp  Repo.h  Service.cpp  Service.h  UI.cpp  UI.h  main.cpp  tests.cpp  tests.h
SQL/: Policlinica.sql  README.md
(+307 files in other folders)
